@@ -2,7 +2,12 @@ package me.elsiff.morefish.fishing;
 
 import com.google.common.collect.BiMap;
 import com.google.common.collect.HashBiMap;
+import com.google.gson.Gson;
+import com.google.gson.JsonArray;
+import com.google.gson.JsonElement;
+import com.google.gson.JsonObject;
 import java.io.File;
+import java.io.FileReader;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
@@ -13,6 +18,7 @@ import java.util.Set;
 import java.util.UUID;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
+import java.util.stream.StreamSupport;
 import javax.annotation.Nonnull;
 import me.elsiff.morefish.MoreFish;
 import me.elsiff.morefish.announcement.PlayerAnnouncement;
@@ -25,14 +31,13 @@ import me.elsiff.morefish.fishing.condition.FishCondition;
 import me.elsiff.morefish.hooker.PluginHooker;
 import me.elsiff.morefish.hooker.ProtocolLibHooker;
 import me.elsiff.morefish.hooker.SkullNbtHandler;
-import net.kyori.adventure.text.serializer.legacy.LegacyComponentSerializer;
+import net.kyori.adventure.text.Component;
+import net.kyori.adventure.text.format.NamedTextColor;
+import net.kyori.adventure.text.format.TextColor;
+import net.kyori.adventure.text.serializer.gson.GsonComponentSerializer;
 import org.bukkit.Bukkit;
-import org.bukkit.ChatColor;
 import org.bukkit.Material;
 import org.bukkit.NamespacedKey;
-import org.bukkit.configuration.ConfigurationSection;
-import org.bukkit.configuration.InvalidConfigurationException;
-import org.bukkit.configuration.file.YamlConfiguration;
 import org.bukkit.enchantments.Enchantment;
 import org.bukkit.entity.Item;
 import org.bukkit.entity.Player;
@@ -43,7 +48,8 @@ import org.bukkit.inventory.meta.SkullMeta;
 
 public final class FishTypeTable {
 
-    private final YamlConfiguration fish = new YamlConfiguration();
+    private static final Gson GSON = new Gson();
+    private JsonObject fish = new JsonObject();
     private final BiMap<FishRarity, List<FishType>> map = HashBiMap.create();
 
     @Nonnull
@@ -59,8 +65,8 @@ public final class FishTypeTable {
     }
 
     @Nonnull
-    public Optional<ConfigurationSection> getItemFormat() {
-        return Optional.ofNullable(fish.getConfigurationSection("item-format"));
+    public Optional<JsonObject> getItemFormat() {
+        return Optional.ofNullable(fish.getAsJsonObject("item-format"));
     }
 
     @Nonnull
@@ -73,102 +79,135 @@ public final class FishTypeTable {
         return map.values().stream().flatMap(List::stream).toList();
     }
 
+    private List<String> getStringList(JsonArray json) {
+        return json.asList().stream().map(JsonElement::getAsString).toList();
+    }
+
+    private boolean getOrDefaultFalse(JsonObject json, String key) {
+        return json.has(key) && json.get(key).getAsBoolean();
+    }
+
+    private double getOrDefaultZero(JsonObject json, String key) {
+        return json.has(key) ? json.get(key).getAsDouble() : 0D;
+    }
+
     public void load() {
         map.clear();
         MoreFish plugin = MoreFish.instance();
-        String fishFile = "fish.yml";
+        String fishFile = "fish.json";
         try {
             plugin.saveResource(fishFile, false);
-            fish.load(new File(plugin.getDataFolder(), fishFile));
-            ConfigurationSection raritiesConfig = fish.getConfigurationSection("rarity-list");
+            FileReader reader = new FileReader(new File(plugin.getDataFolder(), fishFile));
+            fish = GSON.fromJson(reader, JsonObject.class);
+            JsonObject raritiesConfig = fish.getAsJsonObject("rarity-list");
             if (raritiesConfig != null) {
-                List<FishRarity> rarities = raritiesConfig.getKeys(false).stream().map(raritiesConfig::getConfigurationSection).filter(Objects::nonNull).map(cs -> {
-                    List<CatchHandler> catchHandlers = new ArrayList<>();
-                    if (cs.contains("commands")) {
-                        catchHandlers.add(new CatchCommandExecutor(cs.getStringList("commands")));
+                List<FishRarity> rarities = raritiesConfig.keySet().stream().map(key -> {
+                    if (!raritiesConfig.has(key)) {
+                        return null;
                     }
-                    else if (cs.getBoolean("firework", false)) {
+
+                    JsonObject json = raritiesConfig.getAsJsonObject(key);
+                    List<CatchHandler> catchHandlers = new ArrayList<>();
+                    if (json.has("commands")) {
+                        catchHandlers.add(new CatchCommandExecutor(getStringList(json.getAsJsonArray("commands"))));
+                    }
+                    else if (getOrDefaultFalse(json, "firework")) {
                         catchHandlers.add(new CatchFireworkSpawner());
                     }
 
-                    String displayName = cs.getString("display-name");
+                    String displayName = json.get("display-name").getAsString();
                     if (displayName == null) {
-                        throw new IllegalArgumentException("display-name is missing from " + cs.getCurrentPath() + ".");
+                        throw new IllegalArgumentException("display-name is missing from rarity-list." + key + ".");
                     }
 
-                    boolean isDefault = cs.getBoolean("default", false);
-                    double chance = cs.getDouble("chance", 0D) / 100D;
-                    ChatColor color = Optional.ofNullable(cs.getString("color")).map(String::toUpperCase).map(ChatColor::valueOf).orElse(ChatColor.RESET);
-                    PlayerAnnouncement announcement = PlayerAnnouncement.fromConfigOrDefault(cs, "catch-announce", Config.getDefaultCatchAnnouncement());
-                    boolean skipItemFormat = cs.getBoolean("skip-item-format", false);
-                    boolean noDisplay = cs.getBoolean("no-display", false);
-                    boolean firework = cs.getBoolean("firework", false);
-                    double additionalPrice = cs.getDouble("additional-price", 0D);
-                    List<FishCondition> conditions = FishCondition.loadFrom(cs, "conditions");
-                    return new FishRarity(cs.getName(), displayName, isDefault, chance, color, catchHandlers, conditions, announcement, skipItemFormat, noDisplay, firework, additionalPrice);
-                }).toList();
-                ConfigurationSection fishList = fish.getConfigurationSection("fish-list");
+                    boolean isDefault = getOrDefaultFalse(json, "default");
+                    double chance = getOrDefaultZero(json, "chance") / 100D;
+                    TextColor color = Optional.ofNullable(json.get("color").getAsString()).map(s -> {
+                        if (s.startsWith("#")) {
+                            return TextColor.fromHexString(s);
+                        }
+
+                        return NamedTextColor.NAMES.value(s);
+                    }).orElse(NamedTextColor.WHITE);
+                    PlayerAnnouncement announcement = PlayerAnnouncement.fromConfigOrDefault(json, "catch-announce", Config.getDefaultCatchAnnouncement());
+                    boolean skipItemFormat = getOrDefaultFalse(json, "skip-item-format");
+                    boolean noDisplay = getOrDefaultFalse(json, "no-display");
+                    boolean firework = getOrDefaultFalse(json, "firework");
+                    double additionalPrice = getOrDefaultZero(json, "additional-price");
+                    List<FishCondition> conditions = FishCondition.loadFrom(json, "conditions");
+                    return new FishRarity(key, displayName, isDefault, chance, color, catchHandlers, conditions, announcement, skipItemFormat, noDisplay, firework, additionalPrice);
+                }).filter(Objects::nonNull).toList();
+                JsonObject fishList = fish.getAsJsonObject("fish-list");
                 if (fishList != null) {
-                    fishList.getKeys(false).stream().map(fishList::getConfigurationSection).filter(Objects::nonNull).forEach(groupByRarity -> {
-                        String rarityName = groupByRarity.getName();
+                    fishList.keySet().forEach(rarityName -> {
+                        if (!fishList.has(rarityName)) {
+                            return;
+                        }
+
+                        JsonObject groupByRarity = fishList.getAsJsonObject(rarityName);
                         FishRarity rarity = rarities.stream().filter(fishRarity -> rarityName.equals(fishRarity.name())).findFirst().orElseThrow(() -> new IllegalStateException("Rarity " + rarityName + " doesn't exist."));
-                        List<FishType> fishTypes = groupByRarity.getKeys(false).stream().map(groupByRarity::getConfigurationSection).filter(Objects::nonNull).map(cs -> {
+                        List<FishType> fishTypes = groupByRarity.keySet().stream().map(name -> {
+                            JsonObject json = groupByRarity.getAsJsonObject(name);
                             List<CatchHandler> catchHandlers = new ArrayList<>(rarity.catchHandlers());
-                            if (cs.contains("commands")) {
-                                catchHandlers.add(new CatchCommandExecutor(cs.getStringList("commands")));
+                            if (json.has("commands")) {
+                                catchHandlers.add(new CatchCommandExecutor(getStringList(json.getAsJsonArray("commands"))));
                             }
-                            else if (cs.getBoolean("firework", false)) {
+                            else if (getOrDefaultFalse(json, "firework")) {
                                 catchHandlers.add(new CatchFireworkSpawner());
                             }
 
-                            String displayName = cs.getString("display-name");
+                            String displayName = json.get("display-name").getAsString();
                             if (displayName == null) {
-                                throw new IllegalArgumentException("display-name is missing from " + cs.getCurrentPath() + ".");
+                                throw new IllegalArgumentException("display-name is missing from fish-list." + rarityName + "." + name + ".");
                             }
 
-                            String name = cs.getName();
-                            double minLength = cs.getDouble("length-min");
-                            double maxLength = cs.getDouble("length-max");
-                            ItemStack itemStack = loadItemStack(name, cs.getConfigurationSection("icon"));
-                            PlayerAnnouncement announcement = PlayerAnnouncement.fromConfigOrDefault(cs, "catch-announce", rarity.catchAnnouncement());
-                            List<FishCondition> conditions = Stream.concat(FishCondition.loadFrom(cs, "conditions").stream(), rarity.conditions().stream()).toList();
-                            boolean skipItemFormat = cs.getBoolean("skip-item-format", rarity.hasNotFishItemFormat());
-                            boolean noDisplay = cs.getBoolean("no-display", rarity.noDisplay());
-                            boolean firework = cs.getBoolean("firework", rarity.hasCatchFirework());
-                            double additionalPrice = rarity.additionalPrice() + cs.getDouble("additional-price", 0D);
-                            return new FishType(cs.getName(), rarity, displayName, minLength, maxLength, itemStack, catchHandlers, announcement, conditions, skipItemFormat, noDisplay, firework, additionalPrice);
+                            double minLength = json.get("length-min").getAsDouble();
+                            double maxLength = json.get("length-max").getAsDouble();
+                            ItemStack itemStack = loadItemStack(name, json.getAsJsonObject("icon"), "fish-list." + rarityName + "." + name);
+                            PlayerAnnouncement announcement = PlayerAnnouncement.fromConfigOrDefault(json, "catch-announce", rarity.catchAnnouncement());
+                            List<FishCondition> conditions = Stream.concat(FishCondition.loadFrom(json, "conditions").stream(), rarity.conditions().stream()).toList();
+                            boolean skipItemFormat = getOrDefault(json, "skip-item-format", rarity.hasNotFishItemFormat());
+                            boolean noDisplay = getOrDefault(json,"no-display", rarity.noDisplay());
+                            boolean firework = getOrDefault(json, "firework", rarity.hasCatchFirework());
+                            double additionalPrice = rarity.additionalPrice() + getOrDefaultZero(json, "additional-price");
+                            return new FishType(name, rarity, displayName, minLength, maxLength, itemStack, catchHandlers, announcement, conditions, skipItemFormat, noDisplay, firework, additionalPrice);
                         }).toList();
                         map.put(rarity, fishTypes);
                     });
                 }
             }
         }
-        catch (IOException | InvalidConfigurationException e) {
+        catch (IOException e) {
             plugin.getLogger().severe("Failed to load " + fishFile);
         }
     }
 
-    private ItemStack loadItemStack(String name, ConfigurationSection cs) {
-        if (cs == null) {
+    private boolean getOrDefault(JsonObject json, String key, boolean def) {
+        return json.has(key) ? json.get(key).getAsBoolean() : def;
+    }
+
+    private ItemStack loadItemStack(String name, JsonObject json, String path) {
+        if (json == null) {
             throw new IllegalArgumentException("icon is missing from " + name);
         }
 
-        String id = cs.getString("id");
+        String id = json.get("id").getAsString();
         if (id == null) {
-            throw new IllegalArgumentException("id is missing from " + cs.getCurrentPath() + ".");
+            throw new IllegalArgumentException("id is missing from " + path + ".icon");
         }
 
         Material material = Material.matchMaterial(id);
         if (material == null) {
-            throw new IllegalArgumentException("id " + id + " in " + cs.getCurrentPath() + " is not a valid item ID.");
+            throw new IllegalArgumentException("id " + id + " in " + path + ".icon is not a valid item ID.");
         }
 
-        int amount = cs.getInt("amount", 1);
+        int amount = json.has("amount") ? json.get("amount").getAsInt() : 1;
         ItemStack itemStack = new ItemStack(material, amount);
         ItemMeta itemMeta = itemStack.getItemMeta();
-        itemMeta.lore(cs.getStringList("lore").stream().map(content -> LegacyComponentSerializer.legacy('&').deserialize(content)).collect(Collectors.toList()));
-        if (cs.contains("enchantments")) {
-            cs.getStringList("enchantments").stream().map(string -> string.split("\\|")).forEach(tokens -> {
+        List<Component> lore = StreamSupport.stream(json.getAsJsonArray("lore").spliterator(), false).map(content -> GsonComponentSerializer.gson().deserialize(content.toString())).toList();
+        itemMeta.lore(lore);
+        if (json.has("enchantments")) {
+            StreamSupport.stream(json.getAsJsonArray("enchantments").spliterator(), false).map(JsonElement::getAsString).map(string -> string.split("\\|")).forEach(tokens -> {
                 Enchantment enchantment = Enchantment.getByKey(NamespacedKey.minecraft(tokens[0]));
                 if (enchantment != null) {
                     int level = Integer.parseInt(tokens[1]);
@@ -177,22 +216,22 @@ public final class FishTypeTable {
             });
         }
 
-        itemMeta.setUnbreakable(cs.getBoolean("unbreakable", false));
+        itemMeta.setUnbreakable(json.has("unbreakable") && json.get("unbreakable").getAsBoolean());
         if (itemMeta instanceof Damageable) {
-            ((Damageable) itemMeta).setDamage(cs.getInt("durability", 0));
+            ((Damageable) itemMeta).setDamage(json.has("durability") ? json.get("durability").getAsInt() : 0);
         }
 
-        if (cs.contains("skull-uuid") && itemMeta instanceof SkullMeta) {
+        if (json.has("skull-uuid") && itemMeta instanceof SkullMeta) {
             ((SkullMeta) itemMeta).setOwningPlayer(Bukkit.getOfflinePlayer(UUID.fromString("skull-uuid")));
         }
 
         itemStack.setItemMeta(itemMeta);
-        if (cs.contains("skull-texture")) {
+        if (json.has("skull-texture")) {
             ProtocolLibHooker protocolLib = new ProtocolLibHooker();
             PluginHooker.checkHooked(protocolLib);
             SkullNbtHandler skullNbtHandler = protocolLib.skullNbtHandler;
             if (skullNbtHandler != null) {
-                String skullTexture = cs.getString("skull-texture");
+                String skullTexture = json.get("skull-texture").getAsString();
                 if (skullTexture != null) {
                     itemStack = skullNbtHandler.writeTexture(itemStack, skullTexture);
                 }
@@ -238,7 +277,6 @@ public final class FishTypeTable {
         List<FishType> types = map.get(rarity).stream().filter(type -> type.conditions().stream().allMatch(condition -> condition.check(caught, fisher, competition))).toList();
         if (types.isEmpty()) {
             return pickRandomType(caught, fisher, competition);
-            //throw new IllegalStateException("No fish type matches given condition");
         }
 
         return types.get(new Random().nextInt(types.size()));
